<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        style="@style/Caption"
        android:id="@+id/input_bar_amount_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_horizontal"
        tools:text="@string/caption_account_balance"
        />

    <TextView
        style="@style/Caption"
        android:id="@+id/input_bar_amount_yuan"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_item"
        android:gravity="center"
        android:text="@string/yuan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/input_bar_amount_caption"
        android:layout_marginStart="@dimen/margin_horizontal"
        />

    <EditText
        style="@style/Input"
        android:id="@+id/input_bar_amount_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint_money_amount"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/input_bar_amount_yuan"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_horizontal_tiny"
        android:layout_marginEnd="@dimen/margin_horizontal"
        />

</android.support.constraint.ConstraintLayout>