<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_bar_background"
    >

    <TextView
        android:id="@+id/assets_net_asset_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:layout_marginStart="@dimen/margin_horizontal_large"
        android:text="@string/caption_my_net_asset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/assets_net_asset_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:textSize="@dimen/text_size_amount_large"
        app:layout_constraintTop_toBottomOf="@id/assets_net_asset_caption"
        app:layout_constraintStart_toStartOf="@id/assets_net_asset_caption"
        tools:text="23,207.71"
        />

    <TextView
        android:id="@+id/assets_total_asset_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:layout_marginBottom="@dimen/margin_vertical_large"
        android:text="@string/caption_total_asset"
        app:layout_constraintTop_toBottomOf="@id/assets_net_asset_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/assets_net_asset_caption"
        />

    <TextView
        android:id="@+id/asset_total_asset_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:textColor="@color/colorAsset"
        app:layout_constraintBaseline_toBaselineOf="@id/assets_total_asset_caption"
        app:layout_constraintStart_toEndOf="@id/assets_total_asset_caption"
        tools:text="23,207.71"
        />

    <TextView
        android:id="@+id/assets_total_liability_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:text="@string/caption_total_liability"
        app:layout_constraintBaseline_toBaselineOf="@id/assets_total_asset_caption"
        app:layout_constraintEnd_toStartOf="@id/assets_total_liability_content"
        />

    <TextView
        android:id="@+id/assets_total_liability_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_horizontal_large"
        android:textColor="@color/colorLiability"
        app:layout_constraintBaseline_toBaselineOf="@id/assets_total_asset_caption"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="1,234.00"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>